--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .flex-center {
+        @apply flex items-center justify-center;
+    }
+
+    .transition-300 {
+        transition: all 300ms ease-in-out;
+    }
+    .transition-150 {
+        transition: all 150ms ease-in-out;
+    }
+}
